Added: Connection Pool

--- a/.env
+++ b/.env
@@ -3,16 +3,12 @@ ENV=developement
 
 # Application settings
 APP_HOST=127.0.0.1
-APP_PORT=9000
+APP_PORT=4001
 APP_SESSION_EXPIRATION=10 # Minutes
 APP_SHUTDOWN_TIMEOUT=5
 
 # Database settings
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=003334743LA032
-DB_NAME=go_bank_core_api
+DATABASE_URL=postgres://postgres:003334743LA032@localhost:5432/go_bank_core_api?sslmode=disable
 
 # Requests
 REQUESTS_PER_SECONDS=5
